# playground

./: constant_mem.cu
c/SIMD/: Makefile  mm256_movemask_epi8  mm256_movemask_epi8.c  oai_SIMD.c
c/data_alignment/: data_alignment.c
c/include_test/: Makefile  README.md  include.h  test.c  test_header.c  test_header.h
c/include_test/include/: Makefile  include.c  include.h
c/macro/: README.md  va_arg_str.c
c/preprocessor/: 01_variadic_macros.c  02_stringize_concatenation.c  03_count_arguments.c  04_macro_override.c
c/uid/: setuid-1.c
cmake/: reference.md
cmake/01_basics/: main.c
cmake/02_add_library/: CMakeLists.txt  Makefile  tutorial.h
cmake/02_add_library/util/: CMakeLists.txt  mymath.cpp  print.cpp
cmake/03_InstallnTest/src/: Makefile  main.cpp
cmake/03_InstallnTest/util/: helper.cpp  helper.h
cmake/04_CUDA/: clib.h  culib.c  culib.h  main.c
cmake/04_CUDA_C/: culib.c  culib.h  main.c
cmake/tutorial/01_basics/: CMakeLists.txt  Makefile  demo1
cmake/tutorial/02_add_library/: CMakeLists.txt  main.cpp  tutorial.h.in
cmake/tutorial/02_add_library/util/: Makefile  mymath.h  print.h
cmake/tutorial/03_InstallnTest/: CMakeLists.txt  Makefile  reference.md
cmake/tutorial/03_InstallnTest/util/: CMakeLists.txt  Makefile
cuda/cuda_example/: Makefile  constant_mem.cu  memcpy.cu  showGPUinfo.cu
cuda/fp16/: Makefile  README.md  cuda_util.h  matrix_mul.cu  matrix_mul.h
programmer/ch2_Compilation/: hello.S  readme.md
programmer/ch3_ObjectFile/: SimpleSection.c  SimpleSection.txt
programmer/chapter2/: hello.i  hello.s  readme.md
sysprog/dlinked_list/: dlinked_list.c  dlinked_list.h
